--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.xdja.iss</groupId>
     <artifactId>statistic-info</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.8</version>
 
 
     <dependencies>
@@ -21,6 +21,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.9.0</version>
         </dependency>
     </dependencies>
     <properties>
