--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,17 @@
 
     <groupId>com.xdja.iss</groupId>
     <artifactId>statistic-info</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.6</version>
 
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.thrift/libthrift -->
         <dependency>
             <groupId>org.apache.thrift</groupId>
